# swagmac

./: .gitignore  Makefile.am  README.md  configure.ac  swagmac.conf-sample
src/: swagmac.c
